# hdfs-duckdb

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.githooks/: pre-push
.github/workflows/: MainDistributionPipeline.yml
scripts/: check-quality-gates.sh
scripts/e2e/: exec_duckdb_in_hdfs_container.sh  run_libhdfs_e2e.sh  run_python_e2e.sh  stage_local_extension_repo.sh  upload_fixtures_to_hdfs.sh  wait_for_hdfs.sh
src/: hdfs_client_registry.cpp  hdfs_config.cpp  hdfs_duckdb_extension.cpp  hdfs_extension.cpp  hdfs_filesystem.cpp  hdfs_functions.cpp  hdfs_path.cpp  hdfs_trace.cpp  libhdfs_loader.cpp
src/include/: hdfs_client_registry.hpp  hdfs_config.hpp  hdfs_constants.hpp  hdfs_duckdb_extension.hpp  hdfs_extension.hpp  hdfs_filesystem.hpp  hdfs_functions.hpp  hdfs_path.hpp  hdfs_trace.hpp  libhdfs.hpp
test/data/parquet/: part-000.parquet  part-001.parquet
test/e2e/: docker-compose.yml  hdfs_duckdb_e2e_read.test
test/python/: requirements.txt  test_hdfs_e2e.py
test/sql/: hdfs.test  hdfs_duckdb.test  hdfs_duckdb_errors.test  hdfs_duckdb_glob.test  hdfs_duckdb_persistent.test  hdfs_trace_settings.test
test/unittest/: test_hdfs_config.cpp  test_hdfs_path.cpp  test_hdfs_trace.cpp  test_libhdfs_loader.cpp
